Enable date selection
Added drop down to enable date selection based on local storage

--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "achievement-today",
-  "version": "0.1.0",
+  "author": "Raz",
+  "version": "0.1.1",
   "private": true,
   "homepage": ".",
   "dependencies": {
